--- a/page/styles.css
+++ b/page/styles.css
@@ -1,10 +1,11 @@
 /*Importar los estilos para cada seccion del portafolio*/
 
 @import url("../blocks/about.css");
+@import url("../blocks/body.css");
 @import url("../blocks/contact.css");
 @import url("../blocks/content.css");
 @import url("../blocks/footer.css");
 @import url("../blocks/header.css");
 @import url("../blocks/home.css");
-@import url("../blocks/navigate.css");
+@import url("../blocks/nav.css");
 @import url("../blocks/projects.css");
