--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,5 +1,25 @@
 .about {
-    grid-area: content;
-    background-color: #fff3e0;
-    padding: 20px;
+    position: relative;
+    display: block;
+    background-color: rgb(0, 0, 0);
+    color: rgb(250, 250, 250);
+}
+
+.about__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.0rem;
+    margin: 0;
+    padding: 20px 80px 20px;
+}
+
+.about__description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    text-align: justify;
+    margin: 0;
+    padding: 20px 80px 80px;
 }
