--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,16 +1,61 @@
 .header {
-    display: block;
-    justify-content: center;
+  position: relative;
+  display: block;
+  background-image: url('../images/gabriel-heinzer-EUzk9BIEq6M-unsplash.jpg');
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-blend-mode: darken;
+  height: 500px;
 }
 
-.header__user {
-    font-size: 2rem;
-    text-align: center;
-    margin: 0;
+.header__title {
+  position: relative;
+  top: 35%;
+  right: 30%;
+  transform: translateY(-50%);
+  text-align: center;
+  font-size: 3.0rem;
+  color: rgb(255, 255, 255);
+  margin: 0;
+}
+
+.header__title::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 4px;
+  background-color: rgb(255, 255, 255);
+  margin: 20px auto 0 auto;
 }
 
 .header__description {
-    font-size: 1.2rem;
-    text-align: center;
-    margin: 0;
+  position: relative;
+  top: 35%;
+  right: 30%;
+  transform: translateY(-50%);
+  text-align: center;
+  font-size: 2.0rem;
+  color: rgb(255, 255, 255);
+  margin: 0;
+}
+
+.header__icons {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  top: 38%;
+  right: 30%;
+  transform: translateY(-50%);
+  gap: 20px;
+}
+
+.header__icon {
+  max-width: 100%;
+  height: 40px;
+}
+
+.header__icon:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
 }
