--- a/blocks/home.css
+++ b/blocks/home.css
@@ -1,5 +1,25 @@
 .home {
-    grid-area: content;
-    background-color: #e0f7fa;
-    padding: 20px;
+  position: relative;
+  display: block;
+  background-color: rgb(0, 5, 10);
+  color: rgb(250, 250, 250);
+}
+
+.home__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.0rem;
+    margin: 0;
+    padding: 60px 80px 20px;
+}
+
+.home__description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    text-align: justify;
+    margin: 0;
+    padding: 20px 80px 80px;
 }
