--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,6 +1,34 @@
 .nav {
-    grid-area: nav;
-    background-color: #f4f4f4;
-    padding: 15px;
-    border-radius: 8px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.nav__list {
+    position: relative;
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__list_location {
+    right: 80px;
+    top: 20px;
+}
+
+.nav__link {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.nav__link:hover {
+    color: #007acc;
+}
+
+.nav__link:active {
+    color: #005f99;
 }
