--- a/blocks/skills.css
+++ b/blocks/skills.css
@@ -7,14 +7,15 @@
 
 .skills__title {
     font-size: 2.0rem;
-    margin: 40px 0 20px; 
+    padding: 60px 80px 20px;
+    margin: 0;
     color: rgb(250, 250, 250);
 }
 
 .skills__list {
     list-style-type: none;
-    padding: 0;
-    margin: 0 20px 40px;
+    padding: 20px 80px 80px;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
