--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.8);
   background-blend-mode: darken;
   height: 500px;
+  width: 100%;
 }
 
 .header__title {
@@ -18,6 +19,8 @@
   font-size: 3.0rem;
   color: rgb(255, 255, 255);
   margin: 0;
+  font-weight: bold;
+  padding: 0 80px;
 }
 
 .header__title::after {
