--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,6 @@
 .page {
   min-width: 760px;
-  max-width: 100vw;
+  max-width: 1440px;
   margin: auto;
   font-family: "Roboto", sans-serif;
   font-size: 20px;
